Fix spacing issues on login pages

--- a/ui/src/app/pages/register/register.page.scss
+++ b/ui/src/app/pages/register/register.page.scss
@@ -6,14 +6,14 @@
     position: relative;
     width: 100%;
     margin: 0 auto;
-    top: 45%;
-    transform: translateY(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 ion-grid {
+    padding: 0;
+
     ion-row {
         height: 100%;
 
@@ -21,6 +21,7 @@ ion-grid {
             display: flex;
             justify-content: center;
             align-items: center;
+            max-height: 100vh;
 
             ion-card {
                 border-radius: 15px;
